# ai_vox

./: .gitignore  CMakeLists.txt  LICENSE  README.md  library.properties  partitions.csv  platformio.ini
src/core/: CMakeLists.txt  ai_vox_engine.cpp  ai_vox_engine_impl.cpp  ai_vox_engine_impl.h  audio_input_engine.cpp  audio_input_engine.h  audio_output_engine.cpp  audio_output_engine.h  audio_session.cpp  audio_session.h  fetch_config.cpp  fetch_config.h  idf_component.yml  meminfo.cpp  meminfo.h  opus_audio_decoder.cpp  opus_audio_decoder.h  opus_audio_encoder.cpp  opus_audio_encoder.h  silk_resampler.cpp  silk_resampler.h
src/core/clogger/: clogger_esp32.h
src/core/dependencies/: dependencies.cpp
src/core/display/: display.cpp  lcd_display.cc  lcd_display.h  oled_display.cpp
src/core/espressif_button/: button_interface.h
src/core/espressif_esp_codec_dev/: esp_codec_dev_defaults.h
src/core/espressif_esp_websocket_client/: esp_websocket_client.c
src/core/flex_array/: flex_array.h
src/core/font/: font_emoji_64.c
src/core/font/emoji/: emoji_1f602_32.c  emoji_1f602_64.c  emoji_1f606_32.c  emoji_1f606_64.c  emoji_1f609_32.c  emoji_1f609_64.c  emoji_1f60c_32.c  emoji_1f60c_64.c  emoji_1f60d_32.c  emoji_1f60d_64.c  emoji_1f60e_32.c  emoji_1f60e_64.c  emoji_1f60f_32.c  emoji_1f60f_64.c  (+28 more)
src/core/iot/: iot_entity.cpp  iot_manager.cpp  iot_manager.h
src/core/libopus/: opus_config.h
src/core/messaging/: message.h  message_queue.h
src/core/task_queue/: task_queue.h
src/core/wake_net/: wake_net.cpp  wake_net.h
src/core/wifi/: wifi.cpp  wifi.h
(+67 files in other folders)
